[gd_scene load_steps=3 format=2]

[ext_resource path="res://InventoryPanel.gd" type="Script" id=1]
[ext_resource path="res://WeaponsTab.tscn" type="PackedScene" id=2]

[node name="InventoryPanel" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -63.0
margin_top = -118.0
margin_right = 63.0
margin_bottom = 118.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 125.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 124.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsHead" type="Label" parent="VBoxContainer/HeadContainer"]
margin_left = 49.0
margin_right = 75.0
margin_bottom = 12.0
text = "Stats"

[node name="RankLbl" type="Label" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 124.0
margin_bottom = 26.0
text = "Rank:"

[node name="RepLbl" type="Label" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 124.0
margin_bottom = 40.0
text = "Reputation:"

[node name="HealthLbl" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 124.0
margin_bottom = 54.0
text = "Health:"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 55.0
margin_right = 124.0
margin_bottom = 123.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeadContainer2" type="CenterContainer" parent="VBoxContainer2"]
margin_right = 123.0
margin_bottom = 12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryHead" type="Label" parent="VBoxContainer2/HeadContainer2"]
margin_left = 40.0
margin_right = 82.0
margin_bottom = 12.0
text = "Inventory"

[node name="MoneyInvLbl" type="Label" parent="VBoxContainer2"]
margin_top = 14.0
margin_right = 123.0
margin_bottom = 26.0
text = "Money:"

[node name="MeleeLbl" type="Label" parent="VBoxContainer2"]
margin_top = 28.0
margin_right = 123.0
margin_bottom = 40.0
text = "Melee:"

[node name="RangedLbl" type="Label" parent="VBoxContainer2"]
margin_top = 42.0
margin_right = 123.0
margin_bottom = 54.0
text = "Ranged:"

[node name="AmmoLbl" type="Label" parent="VBoxContainer2"]
margin_top = 56.0
margin_right = 123.0
margin_bottom = 68.0
text = "Ammo:"

[node name="CritBoostLbl" type="Label" parent="VBoxContainer2"]
margin_top = 70.0
margin_right = 123.0
margin_bottom = 82.0
text = "Crit Boost:"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 135.0
margin_right = 126.0
margin_bottom = 203.0
size_flags_horizontal = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer3"]
margin_right = 125.0
margin_bottom = 12.0

[node name="RelationHead" type="Label" parent="VBoxContainer3/CenterContainer"]
margin_left = 43.0
margin_right = 82.0
margin_bottom = 12.0
text = "Relations"

[node name="CosaLbl" type="Label" parent="VBoxContainer3"]
margin_top = 14.0
margin_right = 125.0
margin_bottom = 26.0
text = "Cosa Nostra:"

[node name="UndzerLbl" type="Label" parent="VBoxContainer3"]
margin_top = 28.0
margin_right = 125.0
margin_bottom = 40.0
text = "Undzer Shtik:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PavLbl" type="Label" parent="VBoxContainer3"]
margin_top = 42.0
margin_right = 125.0
margin_bottom = 54.0
text = "Pavees: "

[node name="MobLbl" type="Label" parent="VBoxContainer3"]
margin_top = 56.0
margin_right = 125.0
margin_bottom = 68.0
text = "Harlem Mob:"

[node name="CloseButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -24.0
margin_right = 53.0
margin_bottom = -5.0
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeWpnsBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -53.0
margin_top = -24.0
margin_right = -10.0
margin_bottom = -5.0
text = "Equipment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponsTab" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="ChangeWpnsBtn" to="." method="_on_ChangeWpnsBtn_pressed"]
